--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -28,8 +28,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!-- 🗃️ Spring Data JPA (for ORM + Hibernate) -->
+        <dependency>
+          <groupId>at.favre.lib</groupId>
+          <artifactId>bcrypt</artifactId>
+          <version>0.9.0</version>
+        </dependency>
+       <!-- 🗃️ Spring Data JPA (for ORM + Hibernate) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
